// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel ACT theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-me5g8m-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ACT_ET theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-s79y5h-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1o1tdqx-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1onnyk5-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-keyuqc-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;
